--- a/debug/debug.css
+++ b/debug/debug.css
@@ -1,16 +1,23 @@
 @import '../src/css/default.css';
 
 :root {
-  --color-theme: #555;
+  --color-theme: #fff;
+  --color-bg: linear-gradient(to bottom, #7474BF 0%, #348AC7 100%);
+}
+html {
+  height: 100%;
+  background: var(--color-bg);
+  background-attachment: fixed;
 }
 body {
-  background-color: #eee;
   color: var(--color-theme);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
   line-height: 1.42;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  margin: 0 auto;
+  max-width: 720px;
 }
 .player {
   position: relative;
@@ -19,10 +26,11 @@ body {
   height: 120px;
   border: none;
   border-radius: 3px;
-  background-color: #fff;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  background-color: #ffffffaa;
+  box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.37);
   box-sizing: border-box;
   padding: 20px;
+  color: #000;
 }
 .player .main {
   display: flex;
@@ -72,6 +80,6 @@ body {
 }
 .spec > p.desc {
   font-size: 0.8em;
-  color: #555555;
+  color: var(--color-theme);
   margin: 0;
 }
